fix: correcting css if reply div and preview div, if reply of image then small image visible on reply div at right side

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2682,7 +2682,6 @@ input:valid[focused="true"] ~ .tickkk{
 }
 .chat-view-area{
     margin-bottom: 10px;
-    height: calc(81% - 80px);
     overflow: auto;
     box-sizing: border-box;
 }
@@ -2733,6 +2732,7 @@ input:valid[focused="true"] ~ .tickkk{
     border-radius: 6px;
     margin-bottom: 4px;
     cursor: pointer;
+    position: relative;
 }
 .replied-img{
     height: 24px;
@@ -2901,6 +2901,25 @@ input:valid[focused="true"] ~ .tickkk{
     font-size: 13px;
     white-space: pre-line;     /* for rendering the 'Enter' white space on browser */
 }
+.reply-message-img-icon{
+    margin-left: 6px;
+    color: rgb(73, 71, 71);
+    font-size: 13px;
+}
+.reply-message-img-right{
+    height: 66px;
+    width: 66px;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.reply-message-image-right{
+    height: 36px;
+    width: 36px;
+}
 .reply-message-cancel{
     color: rgb(73, 71, 71);
     font-size: 12px;
@@ -2908,6 +2927,9 @@ input:valid[focused="true"] ~ .tickkk{
     top: 2px;
     right: 4px;
     cursor: pointer;
+    background-color: #78e5e3;
+    padding: 1px 3px;
+    border-radius: 50%;
 }
 .input-chat{
     display: flex;
